test/Failing/WildcardVar.pi
module WildcardVar where

data Unit : Type :=
  unit : Unit

id : Unit -> Unit
id = \_ . _